--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
     "@types/uuid": "^8.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "^2.1.3",
+    "redux": "^4.2.0",
     "typescript": "^4.8.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
