--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.4",
     "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.8.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
